[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/NotoSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Shader" id=3]
code = "    shader_type canvas_item;

uniform float amount : hint_range(0,0.5);

vec4 sample_glow_pixel(sampler2D tex, vec2 uv) {
   float hdr_threshold = amount; 
    return max(textureLod(tex, uv, 2.0) - hdr_threshold, vec4(0.0));
}

void fragment() {
    vec2 ps = SCREEN_PIXEL_SIZE;
    // Get blurred color from pixels considered glowing
    vec4 col0 = sample_glow_pixel(SCREEN_TEXTURE, SCREEN_UV + vec2(-ps.x, 0));
    vec4 col1 = sample_glow_pixel(SCREEN_TEXTURE, SCREEN_UV + vec2(ps.x, 0));
    vec4 col2 = sample_glow_pixel(SCREEN_TEXTURE, SCREEN_UV + vec2(0, -ps.y));
    vec4 col3 = sample_glow_pixel(SCREEN_TEXTURE, SCREEN_UV + vec2(0, ps.y));

    vec4 col = texture(SCREEN_TEXTURE, SCREEN_UV);
    vec4 glowing_col = 0.25 * (col0 + col1 + col2 + col3);

    COLOR = vec4(col.rgb + glowing_col.rgb, col.a);
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/amount = null

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 10.0
margin_right = 504.0
margin_bottom = 141.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "Adventures of Pertti the Cube"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="ToolButton" parent="."]
margin_left = 10.0
margin_top = 175.0
margin_right = 210.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.545098, 1, 0.486275, 1 )
custom_colors/font_color_pressed = Color( 0.231373, 0.67451, 0.172549, 1 )
text = "Start Game"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGame" type="ToolButton" parent="."]
margin_left = 10.0
margin_top = 225.0
margin_right = 83.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.305882, 0.305882, 1 )
custom_colors/font_color_pressed = Color( 0.67451, 0.172549, 0.172549, 1 )
text = "Quit"
align = 0

[node name="Bloom" type="ToolButton" parent="."]
margin_top = 275.0
margin_right = 123.0
margin_bottom = 325.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.603922, 0.603922, 0.603922, 1 )
custom_colors/font_color_pressed = Color( 0.356863, 0.356863, 0.356863, 1 )
text = "Bloom"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 4 )
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
[connection signal="pressed" from="StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="QuitGame" to="." method="_on_QuitGame_pressed"]
[connection signal="pressed" from="Bloom" to="." method="_on_Bloom_pressed"]
